--- a/opencv.html
+++ b/opencv.html
@@ -30,9 +30,58 @@
             cv.imshow('canvasOutput', src);
             //mat.delete();
 
+            //let src = cv.imread('canvasInput');
+            let equalDst = new cv.Mat();
+            let claheDst = new cv.Mat();
+            cv.cvtColor(src, src, cv.COLOR_RGBA2GRAY, 0);
+            cv.equalizeHist(src, equalDst);
+            let tileGridSize = new cv.Size(8, 8);
+            // You can try more different parameters
+            let clahe = new cv.CLAHE(40, tileGridSize);
+            clahe.apply(src, claheDst);
+            cv.imshow('canvasOutput', equalDst);
+            cv.imshow('canvasOutput', claheDst);
+            src.delete();
+            equalDst.delete();
+            claheDst.delete();
+            clahe.delete();
+
 
             //let src = cv.imread('canvasInput');
-            cv.cvtColor(src, src, cv.COLOR_RGBA2RGB);
+            /*cv.cvtColor(src, src, cv.COLOR_RGBA2GRAY, 0);
+            let srcVec = new cv.MatVector();
+            srcVec.push_back(src);
+            let accumulate = false;
+            let channels = [0];
+            let histSize = [256];
+            let ranges = [0, 255];
+            let hist = new cv.Mat();
+            let mask = new cv.Mat();
+            let color = new cv.Scalar(255, 255, 255);
+            let scale = 2;
+            // You can try more different parameters
+            cv.calcHist(srcVec, channels, mask, hist, histSize, ranges, accumulate);
+            let result = cv.minMaxLoc(hist, mask);
+            let max = result.maxVal;
+            let dst = new cv.Mat.zeros(src.rows, histSize[0] * scale,
+                cv.CV_8UC3);
+            // draw histogram
+            for (let i = 0; i < histSize[0]; i++) {
+                let binVal = hist.data32F[i] * src.rows / max;
+                let point1 = new cv.Point(i * scale, src.rows - 1);
+                let point2 = new cv.Point((i + 1) * scale - 1, src.rows - binVal);
+                cv.rectangle(dst, point1, point2, color, cv.FILLED);
+            }
+            cv.imshow('canvasOutput', dst);
+            src.delete();
+            dst.delete();
+            srcVec.delete();
+            mask.delete();
+            hist.delete();*/
+
+
+            //let src = cv.imread('canvasInput');
+            /*cv.cvtColor(src, src, cv.COLOR_RGBA2RGB);
             let dst = new cv.Mat();
             let M = new cv.Mat();
             let ksize = new cv.Size(5, 5);
@@ -42,7 +91,7 @@
             cv.imshow('canvasOutput', dst);
             src.delete();
             dst.delete();
-            M.delete();
+            M.delete();*/
         };
 
         function onOpenCvReady() {
